# api/helpers/db/models/Orderable.js
@@ -3,15 +3,24 @@
 'use strict'
 
 module.exports = (sequelize, Datatypes) => {
-  const model = sequelize.define('orderable', {
-    status: Datatypes.ENUM(
-      'ORDERED', 'DELIVERED', 'RETURN_REQUESTED', 'RETURNED')
-  })
+  const model = sequelize.define('orderable', {})
 
-  model.createInstance = function(username) {
+  model.createInstance = function({productId, orderId}) {
     return this.create({
-      userUsername: username.toLowerCase(),
-      status: 'ORDERED'
+      productId,
+      orderId
+    })
+  }
+
+  model.getOrderItem = function({id}) {
+    return this.findOne({
+      where: {
+        id: id
+      },
+      include: [{
+        model: sequelize.models.Orders,
+        as: 'order'
+      }]
     })
   }
 
